<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="EventTypes" Id="{606eba1e-0dde-4098-98d4-ab8f9b2cc7e0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE EventTypes :
(
	Verbose := 0, Debug, Information, Warning, Error, Critical
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>