<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AlarmControl" Id="{fc8fffd1-fa88-4767-b2ef-1451bf2234fc}">
    <Declaration><![CDATA[TYPE AlarmControl :
STRUCT
	ResetAlarms: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>